# duro

./: .flake8  .gitignore  pyproject.toml  tasks.py
duro/: __init__.py  _options.py  _task.py  context.py  draw.py  message.py  queue.py  render.py  renderer.py  spinner.py  tasktree.py
duro/renderers/: __init__.py  _tty.py
stubs/: blessed.pyi  crayons.pyi
