[tool.poetry]
name = "duro"
version = "0.1.0"
description = "How long does it take?"
authors = ["Pedro Cattori <pcattori@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
invoke = "^1.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
